<resources>
    <string name="app_name">GamePlan</string>
    <string name="button_addGame">Add Game</string>
    <string name="hint_gameTitle">Game Title</string>
    <string name="hint_gameDescription">Game Description</string>
    <string name="menu_addGame">Add</string>
    <string name="menu_cancelGame">Cancel</string>
    <string name="enter_game_title">Please Enter a Game Title</string>
    <string name="save_game">Save Game</string>
    <string name="edit_game">Edit Game</string>
    <string name="delete_game">Delete Game</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="list">List</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_second_name">Second Name</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="log_in">Log in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Incorrect Password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_taken">"This email is already in use"</string>
    <string name="sign_out">Sign out</string>
    <string name="button_addImage"> Add a Profile pic </string>
    <string name="select_profile_image">Select a Profile pic </string>
    <string name="creator">Game Creator</string>
    <string name="search_games">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="nav_header_title">GamePlan</string>
    <string name="nav_header_subtitle">user@user</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="button_setLocation">Set Location</string>
    <string name="gamesNotFound">No Games Yet...\nAdd a Game!</string>
    <string name="gameError">Error : Couldn\'t Add Game..</string>
    <string name="messageLoading">Please Wait while the Games are Loading...</string>



</resources>