<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarLayout"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/gameTitle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:hint="@string/hint_gameTitle"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:hint="@string/hint_gameDescription"
                android:inputType="text"
                android:maxLength="150"
                android:maxLines="3"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />


            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:datePickerMode = "spinner"
                android:calendarViewShown="false"/>

            <Button
                android:id="@+id/gameLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_location"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>


            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_addGame"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />



        </LinearLayout>
    </ScrollView>

</FrameLayout>